package eu.telecomnancy.rpg.armure;


public class Helmet extends Armor {
    public Helmet(String name){
        super(name,2);
    }
    
}
